@@ -71,6 +71,21 @@ Note that interfaces created with Glade 2.6.0 will need GTK+ 2.4 and GNOME 2.6.<
 It is not supported any more.</p>
 </li></ul>
 
+
+<h2>CVS Access:</h2>
+<p>
+If you want the bleeding edge code from GNOME cvs you'll need gtk+ >= 2.10,
+you can get it with the following commands:
+</p><p>
+<tt>cvs -d:pserver:anonymous@anoncvs.gnome.org:/cvs/gnome login</tt> [just press enter when asked for a password]<br/>
+<tt>cvs -z3 -d:pserver:anonymous@anoncvs.gnome.org:/cvs/gnome co glade3</tt><br/>
+</p><p>
+To get the stable 3.0 branch (glade3-3-0-branch) you can run instead:
+</p><p>
+<tt>cvs -z3 -d:pserver:anonymous@anoncvs.gnome.org:/cvs/gnome co -r glade3-3-0-branch glade3</tt><br/>
+</p>
+
+
 <h2>Packages:</h2>
 
 <ul>
