@@ -69,32 +69,6 @@ For a list of things that need doing, check out the
 <a href="http://bugzilla.gnome.org/buglist.cgi?query=product%3Aglade3">bugs in bugzilla</a>.
 </p>
 
-<h2>Download</h2>
-<p>
-You can always get the latest
-<a href="http://ftp.gnome.org/pub/GNOME/sources/glade3/">release</a>
-and build it with the usual:
-</p><p>
-<tt>
-./configure<br/>
-make<br/>
-make install<br/>
-</tt>
-</p><p>
-You can also get the bleeding edge code from GNOME cvs with the following commands:
-</p><p>
-<tt>cvs -d:pserver:anonymous@anoncvs.gnome.org:/cvs/gnome login</tt> [just press enter when asked for a password]<br/>
-<tt>cvs -z3 -d:pserver:anonymous@anoncvs.gnome.org:/cvs/gnome co glade3</tt><br/>
-</p><p>
-Then to build enter the glade3 directory and run the usual:
-</p><p>
-<tt>
-./autogen<br/>
-make<br/>
-make install<br/>
-</tt>
-</p>
-
 <h2>Feedback</h2>
 <p>
 For bug reports, comments, feature requests, questions and patches you can write to the
